force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Loan Payment Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>