force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_ACH_Filename__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Filename__c</fullName>
    <defaultValue>&apos;LAPro Migrated LPT&apos;</defaultValue>
    <label>ACH Filename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>