force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Automated_Payment_Setup__c.field-meta.xml
<CustomField>
    <fullName>DM_Automated_Payment_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Automated Payment Setup</label>
    <referenceTo>DM_Automated_Payment_Setup__c</referenceTo>
    <relationshipLabel>DM Loan Payment Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>