force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Clearing_Date__c</fullName>
    <label>Clearing Date</label>
    <type>DateTime</type>
</CustomField>