force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Custom_Field_5__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Field_5__c</fullName>
    <label>DM Custom Field 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>