force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Payment Processing Logic</label>
    <type>Checkbox</type>
</CustomField>