force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>