force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_LAPro_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_LAPro_Posted_Date__c</fullName>
    <label>DM LAPro Posted Date</label>
    <type>DateTime</type>
</CustomField>