force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Migrated_Reversal_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Migrated_Reversal_Date__c</fullName>
    <label>DM Migrated Reversal Date</label>
    <type>Date</type>
</CustomField>