force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Payment Mode</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>DM Loan Payment Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>