force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Type__c</fullName>
    <description>This field is used to determine the reason for which payment is created.Reason can be to settle the loan, sell the loan or waive the interest.</description>
    <inlineHelpText>This field is used to determine the reason for which payment is created.Reason can be to settle the loan, sell the loan or waive the interest.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Waived</fullName>
            </value>
            <value>
                <fullName>DM_Settled</fullName>
            </value>
            <value>
                <fullName>DM_Sold</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>DM_Rebate</fullName>
            </value>
            <value>
                <fullName>Closure-Tolerance</fullName>
            </value>
            <value>
                <fullName>DM_Principal Adjustment - Sub</fullName>
            </value>
            <value>
                <fullName>DM_Excess</fullName>
            </value>
            <value>
                <fullName>Write-Off Recovery</fullName>
            </value>
            <value>
                <fullName>DM_Refinance</fullName>
            </value>
            <value>
                <fullName>DM_Deposit Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>