force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the Principal amount collected for the loan</inlineHelpText>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>