force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Rebate_Payment__c.field-meta.xml
<CustomField>
    <fullName>DM_Rebate_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is Rebate Payment, generated for closing loan balance</description>
    <label>Rebate Payment</label>
    <type>Checkbox</type>
</CustomField>