force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Receipt_Date__c</fullName>
    <label>DM Receipt Date</label>
    <type>Date</type>
</CustomField>