force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Rejected__c.field-meta.xml
<CustomField>
    <fullName>DM_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>