force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>DM_Skip_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>