force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Total_Charges_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Charges_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Charges (Interest)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>