force-app/main/default/objects/DM_Loan_Payment_Transaction__c/fields/DM_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>